--- a/src/css/storage.css
+++ b/src/css/storage.css
@@ -543,7 +543,7 @@ ul.photon-autocomplete {
     background-color: #fff;
     padding: 10px;
     display: none;
-    line-height: 24px;
+    /*line-height: 24px;*/
     border-radius: 2px;
 }
 .leaflet-control-browse .storage-browse-datalayers {
